// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders not visible snackbar with content wrapper but no actual content 1`] = `null`;

exports[`renders snackbar with Text as a child 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(49, 48, 51, 1)",
        "borderRadius": 4,
        "margin": 8,
        "opacity": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
    testID="surface-outer-layer"
  >
    <View
      accessibilityLiveRegion="polite"
      accessible={true}
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "backgroundColor": "rgba(49, 48, 51, 1)",
          "borderRadius": 4,
          "flex": undefined,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 48,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="surface"
    >
      <View
        style={
          {
            "flex": 1,
            "marginHorizontal": 16,
            "marginVertical": 14,
          }
        }
      >
        <View>
          <Text>
            Snackbar content
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with View & Text as a child 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(49, 48, 51, 1)",
        "borderRadius": 4,
        "margin": 8,
        "opacity": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
    testID="surface-outer-layer"
  >
    <View
      accessibilityLiveRegion="polite"
      accessible={true}
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "backgroundColor": "rgba(49, 48, 51, 1)",
          "borderRadius": 4,
          "flex": undefined,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 48,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="surface"
    >
      <View
        style={
          {
            "flex": 1,
            "marginHorizontal": 16,
            "marginVertical": 14,
          }
        }
      >
        <View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#ef9a9a",
                  "padding": 15,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#ffffff",
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "marginLeft": 10,
                }
              }
            >
              Error Message which is veryyyyyyyyyyyy longggggggg Error Message which is veryyyyyyyyyyyy longggggggg
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with action button 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(49, 48, 51, 1)",
        "borderRadius": 4,
        "margin": 8,
        "opacity": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
    testID="surface-outer-layer"
  >
    <View
      accessibilityLiveRegion="polite"
      accessible={true}
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "backgroundColor": "rgba(49, 48, 51, 1)",
          "borderRadius": 4,
          "flex": undefined,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 48,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="surface"
    >
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              },
              [
                {
                  "flex": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 14,
                },
                {
                  "color": "rgba(244, 239, 244, 1)",
                },
              ],
            ],
          ]
        }
      >
        Snackbar content
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minHeight": 48,
            },
            {
              "marginLeft": -12,
            },
          ]
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderRadius": 20,
              "marginLeft": 4,
              "marginRight": 8,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container-outer-layer"
        >
          <View
            accessible={true}
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderColor": "transparent",
                "borderRadius": 20,
                "borderStyle": "solid",
                "borderWidth": 0,
                "flex": undefined,
                "minWidth": 64,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
            testID="button-container"
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "overflow": "hidden",
                  },
                  {
                    "borderRadius": 20,
                  },
                ]
              }
              testID="button"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    [
                      {
                        "textAlign": "left",
                      },
                      {
                        "color": "rgba(28, 27, 31, 1)",
                        "writingDirection": "ltr",
                      },
                      [
                        {
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        [
                          {
                            "marginHorizontal": 16,
                            "marginVertical": 9,
                            "textAlign": "center",
                          },
                          false,
                          {
                            "marginHorizontal": 12,
                          },
                          false,
                          false,
                          {
                            "color": "rgba(208, 188, 255, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                  testID="button-text"
                >
                  Undo
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with content 1`] = `
<View
  pointerEvents="box-none"
  style={
    [
      {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(49, 48, 51, 1)",
        "borderRadius": 4,
        "margin": 8,
        "opacity": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
    testID="surface-outer-layer"
  >
    <View
      accessibilityLiveRegion="polite"
      accessible={true}
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "backgroundColor": "rgba(49, 48, 51, 1)",
          "borderRadius": 4,
          "flex": undefined,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 48,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="surface"
    >
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              },
              [
                {
                  "flex": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 14,
                },
                {
                  "color": "rgba(244, 239, 244, 1)",
                },
              ],
            ],
          ]
        }
      >
        Snackbar content
      </Text>
    </View>
  </View>
</View>
`;
